# guimauve.io

./: .gitignore  README.md
backend/: .gitignore  Cargo.toml
backend/media/: sitemap.xml
backend/migrations/2021-06-30-192142_create_articles/: up.sql
backend/migrations/2021-06-30-192310_create_chapters/: down.sql  up.sql
backend/migrations/2021-06-30-203004_create_contents/: down.sql  up.sql
backend/migrations/2021-06-30-204545_create_tags/: up.sql
backend/migrations/2021-06-30-204637_create_article_tags/: up.sql
backend/migrations/2021-08-14-232515_create_projects/: up.sql
backend/migrations/2021-08-14-232519_create_project_tags/: down.sql  up.sql
backend/migrations/2021-08-15-202128_create_project_images/: down.sql  up.sql
backend/migrations/2021-10-30-234905_alter_article_column_name/: down.sql  up.sql
backend/migrations/2021-10-31-211020_add_image_credits_to_articles/: down.sql  up.sql
backend/migrations/2021-11-07-200552_add_logs/: up.sql
backend/migrations/2021-11-11-232012_add_tsvector_column_articles/: down.sql  up.sql
backend/migrations/2021-11-12-025014_add_tsvector_column_projects/: down.sql  up.sql
backend/migrations/2021-11-13-195212_add_article_updated_column_and_triggers/: down.sql  up.sql
backend/src/: code.rs  interfaces.rs  main.rs  schema.rs
backend/src/errors/: database_error.rs
backend/src/handlers/: articles.rs  chapters.rs  contents.rs  mod.rs  projects.rs  resume_projects.rs  search.rs  tags.rs
backend/src/logger/: custom_logger.rs  mod.rs
backend/src/models/: articles.rs  chapters.rs  contents.rs  from_model.rs  logs.rs  mod.rs  projects.rs  tags.rs
backend/src/service/: articles.rs  mod.rs  projects.rs  search.rs  tags.rs
backend/src/types/: content_type.rs  language.rs  mod.rs  project_category.rs
deploy/: run-backend.sh  run-frontend.sh  run.sh
frontend/: .gitignore  Cargo.toml  Trunk.toml  index.html
frontend/src/: app.rs  main.rs
frontend/src/components/: box_component.rs  button.rs  checkbox.rs  code.rs  footer.rs  header.rs  hr.rs  image.rs  live_resume.rs  loader.rs  mod.rs  modal.rs  navbar.rs  navlink.rs  navlinks.rs  page_not_found.rs  project.rs  projects.rs  results.rs  resume_project.rs  search.rs  select.rs  slideshow.rs  switch.rs  tag.rs  tag_label.rs  tags.rs  text.rs  text_area.rs  text_editor.rs  text_input.rs
frontend/src/components/article/: article.rs  article_card.rs  article_header.rs  articles.rs  chapter.rs  chapter_list.rs  chapters.rs  content.rs  (+2 more)
frontend/src/entities/: action.rs  content_type.rs  interfaces.rs  language.rs  mod.rs  project_category.rs
frontend/src/hooks/: mod.rs  use_effect_except_on_mount.rs
frontend/src/routes/: about.rs  article.rs  articles.rs  home.rs  index.rs  mod.rs  new_article.rs  projects.rs  tag.rs  tags.rs
frontend/src/service/: articles.rs  fetch.rs  mod.rs  projects.rs  search.rs  tags.rs
frontend/src/store/: store.rs
frontend/src/utils/: date.rs  logger.rs  mod.rs
frontend/static/styles/: app.css  switch.css  text_input.scss
