[package]
name = "guimauve-io-backend"
version = "0.1.0"
authors = ["guimauve <contact@guimauve.io>"]
edition = "2018"

[dependencies]
log = "0.4.8"
env_logger = "0.9.0"
actix-web = "3.3.2"
actix-files = "0.5.0"
actix-cors = "0.5.4"
actix-service = "1.0.1"
chrono = { version = "0.4.10", features = ["serde"] }
derive_more = "0.99.2"
diesel = { version = "1.4.8", features = ["postgres","uuidv07", "r2d2", "chrono"] }
diesel-derive-enum = { version = "1.1.1", features = ["postgres"] }
diesel_full_text_search = "1.0.1"
r2d2 = "0.8.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
dotenv_codegen = "0.15.0"

syntect = { version = "4.5.0" }

[profile.release]
opt-level = 3
# Less code to include into binary
panic = 'abort'
# Optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# Link time optimization using using whole-program analysis
lto = true

[features]
editable = []
