[package]
name = "guimauve-io-backend"
version = "0.1.0"
authors = ["guimauve <contact@guimauve.io>"]
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.9"
actix-web = "3.3"
actix-files = "0.5"
actix-cors = "0.5"
actix-service = "1.0"
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.99"
diesel = { version = "1.4", features = ["postgres", "r2d2", "chrono"] }
diesel-derive-enum = { version = "1.1", features = ["postgres"] }
diesel_full_text_search = "1.0"
r2d2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
dotenv_codegen = "0.15"

syntect = { version = "4.5", optional = true }

[features]
editable = ["syntect"]

[profile.release]
opt-level = 3
# Less code to include into binary
panic = 'abort'
# Optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# Link time optimization using using whole-program analysis
lto = true
